--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
     
-    <title>React App</title>
+    <title>Arcanovate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
